--- a/src/app/core/layout/inner-pages/chat/resolve/resolve.component.html
+++ b/src/app/core/layout/inner-pages/chat/resolve/resolve.component.html
@@ -21,17 +21,20 @@
                                 <div class="row">
                                     <div class="chat-list">
                                         <ul>
-                                            <ng-container *ngFor="let contact of (chatState | async).ongoing; let i = index;">
+                                            <ng-container
+                                                    *ngFor="let contact of (chatState | async).ongoing; let i = index;">
                                                 <li [ngClass]="{ active : currentChatIndex == i}"
                                                     (click)="changeCurrentChat(i)" *ngIf="contact.status == 5">
                                                     <div class="col-md-2">
                                                         <div class="chat-head row">
-                                                            <img src="../../../../assets/img/avatar5.png" class="img-responsive">
+                                                            <img src="../../../../assets/img/avatar5.png"
+                                                                 class="img-responsive">
                                                         </div>
                                                     </div>
                                                     <div class="col-md-10">
                                                         <div class="chat-content">
-                                                            <h3>{{contact.client}} <span>{{contact.chatTime.date | amFromUtc | amLocal | amTimeAgo}}</span></h3>
+                                                            <h3>{{contact.client}} <span>{{contact.chatTime.date | amFromUtc | amLocal | amTimeAgo}}</span>
+                                                            </h3>
                                                             <p>{{contact.room}}</p>
                                                         </div>
                                                     </div>
@@ -47,49 +50,60 @@
                                         <div class="box-body">
                                             <div class="chat-btn">
                                                 <div *ngIf="(chatState | async).ongoing[currentChatIndex]?.status == 2">
-                                                    <button (click)="onSomeMsgAction(5)" class="btn btn-success">Resolve Chat</button>
-                                                    <div class="dropdown target-drop" [appDropdown]="'open'" [disable-hover]="true" >
-                                                        <button class="btn btn-default dropdown-toggle"
-                                                                type="button" data-toggle="dropdown">
-                                                            Transfer
-                                                            <span class="caret"></span>
-                                                        </button>
-                                                        <ul class="dropdown-menu">
-                                                            <li class="dropdown-submenu" *ngFor="let department of (chatState | async).agentList; let i = index;">
-                                                                <div class="dropdown" [appDropdown]="'open'" [disable-hover]="false">
-                                                                    <a class="test" tabindex="-1">{{ department.department_name }}  <span class="caret"></span></a>
-                                                                    <ul class="dropdown-menu">
-                                                                        <li><a tabindex="-1" (click)="transferChatToDepartment(department.department_id)">Transfer to department </a></li>
-                                                                        <li class="dropdown-submenu">
-                                                                            <a tabindex="-1" >Transfer to agent </a>
-                                                                            <ul class="super-sub">
-                                                                                <li *ngFor="let agent of department.agent">
-                                                                                    <a tabindex="-1" (click)="transferChatToAgent(agent.agent_id)" [ngClass]="(agent.agent_id === agentId)? 'btn-disabled' : ''"> {{ agent.first_name }}  </a>
-                                                                                </li>
-                                                                            </ul>
-                                                                        </li>
-                                                                    </ul>
-                                                                </div>
-                                                            </li>
-                                                        </ul>
-                                                    </div>
+                                                    <!--<button (click)="onSomeMsgAction(5)" class="btn btn-success">Resolve Chat</button>-->
+                                                    <!--<div class="dropdown target-drop" [appDropdown]="'open'" [disable-hover]="true" >-->
+                                                    <!--<button class="btn btn-default dropdown-toggle"-->
+                                                    <!--type="button" data-toggle="dropdown">-->
+                                                    <!--Transfer-->
+                                                    <!--<span class="caret"></span>-->
+                                                    <!--</button>-->
+                                                    <!--<ul class="dropdown-menu">-->
+                                                    <!--<li class="dropdown-submenu" *ngFor="let department of (chatState | async).agentList; let i = index;">-->
+                                                    <!--<div class="dropdown" [appDropdown]="'open'" [disable-hover]="false">-->
+                                                    <!--<a class="test" tabindex="-1">{{ department.department_name }}  <span class="caret"></span></a>-->
+                                                    <!--<ul class="dropdown-menu">-->
+                                                    <!--<li><a tabindex="-1" (click)="transferChatToDepartment(department.department_id)">Transfer to department </a></li>-->
+                                                    <!--<li class="dropdown-submenu">-->
+                                                    <!--<a tabindex="-1" >Transfer to agent </a>-->
+                                                    <!--<ul class="super-sub">-->
+                                                    <!--<li *ngFor="let agent of department.agent">-->
+                                                    <!--<a tabindex="-1" (click)="transferChatToAgent(agent.agent_id)" [ngClass]="(agent.agent_id === agentId)? 'btn-disabled' : ''"> {{ agent.first_name }}  </a>-->
+                                                    <!--</li>-->
+                                                    <!--</ul>-->
+                                                    <!--</li>-->
+                                                    <!--</ul>-->
+                                                    <!--</div>-->
+                                                    <!--</li>-->
+                                                    <!--</ul>-->
+                                                    <!--</div>-->
                                                 </div>
                                                 <!-- Conversations are loaded here -->
-                                                <div class="direct-chat-messages">
+                                                <div class="direct-chat-messages"
+                                                     *ngIf="(chatState | async).ongoing[currentChatIndex]?.status == 5">
                                                     <!-- Message. Default to the left -->
-                                                    <div class="direct-chat-msg" [ngClass]="{ right: chat.direction == 2 }" *ngFor="let chat of (chatState | async).ongoing[currentChatIndex]?.chats">
+                                                    <div class="direct-chat-msg"
+                                                         [ngClass]="{ right: chat.direction == 2 }"
+                                                         *ngFor="let chat of (chatState | async).ongoing[currentChatIndex]?.chats">
                                                         <div class="direct-chat-info clearfix">
-                                                            <span class="direct-chat-name" [ngClass]="chat.direction == 2 ? 'pull-right' : 'pull-left'">{{chat.user}}</span>
-                                                            <span class="direct-chat-timestamp" [ngClass]="chat.direction == 1 ? 'pull-right' : 'pull-left'"> {{chat.created_at.date | amFromUtc | amLocal | amTimeAgo }} </span>
+                                                            <span class="direct-chat-name"
+                                                                  [ngClass]="chat.direction == 2 ? 'pull-right' : 'pull-left'">{{chat.user}}</span>
+                                                            <span class="direct-chat-timestamp"
+                                                                  [ngClass]="chat.direction == 1 ? 'pull-right' : 'pull-left'"> {{chat.created_at.date | amFromUtc | amLocal | amTimeAgo }} </span>
                                                         </div>
-                                                        <img class="direct-chat-img" [src]="chat.direction == 2 ?  '../../../../assets/img/user1-128x128.jpg' : '../../../../assets/img/user3-128x128.jpg'" alt="Message User Image"><!-- /.direct-chat-img -->
+                                                        <img class="direct-chat-img"
+                                                             [src]="chat.direction == 2 ?  '../../../../assets/img/user1-128x128.jpg' : '../../../../assets/img/user3-128x128.jpg'"
+                                                             alt="Message User Image"><!-- /.direct-chat-img -->
                                                         <div class="direct-chat-text">
                                                             {{chat.message}}
                                                         </div>
                                                     </div>
                                                     <div *ngIf="(chatState | async).ongoing[currentChatIndex]?.status == 1">
-                                                        <button (click)="onSomeMsgAction(2)" class="btn btn-primary">Accept</button>
-                                                        <button (click)="onSomeMsgAction(3)" class="btn btn-danger">Reject</button>
+                                                        <button (click)="onSomeMsgAction(2)" class="btn btn-primary">
+                                                            Accept
+                                                        </button>
+                                                        <button (click)="onSomeMsgAction(3)" class="btn btn-danger">
+                                                            Reject
+                                                        </button>
                                                     </div>
 
 
@@ -101,30 +115,31 @@
 
                                         </div>
                                         <!-- /.box-body -->
-                                        <div class="box-footer" *ngIf="(chatState | async).ongoing[currentChatIndex]?.status != 5">
-                                            <form #form="ngForm" (submit)="sendMsg(form)">
-                                                <div class="input-group">
-                                                    <input type="text"
-                                                           name="messageBody"
-                                                           placeholder="Type Message ..."
-                                                           class="form-control"
-                                                           ngModel
-                                                           required
-                                                    >
-                                                    <span class="input-group-btn">
-                        <button type="button"
-                                [disabled]="!form.invalid"
-                                class="btn btn-default btn-flat">
-                          <i class="fa fa-paperclip" aria-hidden="true"></i>
-                        </button>
-                        <button type="submit"
-                                [disabled]="form.invalid"
-                                class="btn btn-primary btn-flat">
-                          Send
-                        </button>
-                      </span>
-                                                </div>
-                                            </form>
+                                        <div class="box-footer"
+                                             *ngIf="(chatState | async).ongoing[currentChatIndex]?.status != 5">
+                                            <!--<form #form="ngForm" (submit)="sendMsg(form)">-->
+                                            <!--<div class="input-group">-->
+                                            <!--<input type="text"-->
+                                            <!--name="messageBody"-->
+                                            <!--placeholder="Type Message ..."-->
+                                            <!--class="form-control"-->
+                                            <!--ngModel-->
+                                            <!--required-->
+                                            <!--&gt;-->
+                                            <!--<span class="input-group-btn">-->
+                                            <!--<button type="button"-->
+                                            <!--[disabled]="!form.invalid"-->
+                                            <!--class="btn btn-default btn-flat">-->
+                                            <!--<i class="fa fa-paperclip" aria-hidden="true"></i>-->
+                                            <!--</button>-->
+                                            <!--<button type="submit"-->
+                                            <!--[disabled]="form.invalid"-->
+                                            <!--class="btn btn-primary btn-flat">-->
+                                            <!--Send-->
+                                            <!--</button>-->
+                                            <!--</span>-->
+                                            <!--</div>-->
+                                            <!--</form>-->
                                         </div>
                                         <!-- /.box-footer-->
                                     </div>
